CustomObjects/objects/invoiceit_s__Invoice_Lines__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>The line items on Invoices, such as products etc.</description>
    <fields>
        <fullName>invoiceit_s__Accounting_Code__c</fullName>
        <label>Revenue Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Calculated_Quantity__c</fullName>
        <description>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</description>
        <inlineHelpText>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</inlineHelpText>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_Date__c</fullName>
        <description>This is the date on which Invoice Line is Created</description>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Line_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System use only, please do not amend</description>
        <inlineHelpText>System use only, please do not amend</inlineHelpText>
        <label>Credited Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <description>The Discount Value to be applied on the Subtotal.</description>
        <inlineHelpText>The Discount Value to be applied on the Subtotal.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Grouped_Quantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Job_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Job__c</fullName>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Line_Amount__c</fullName>
        <description>Quantity * Unit Price</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <description>This would be Subtotal - Discount value</description>
        <formula>invoiceit_s__Line_Amount__c -  invoiceit_s__Discount_Value__c</formula>
        <inlineHelpText>This would be Subtotal - Discount value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Type__c</fullName>
        <description>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Pricing_Model__c</fullName>
        <description>This will specify whether price is Default Type or Tiered Type.</description>
        <inlineHelpText>This will specify whether price is Default Type or Tiered Type.</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee Pricing</fullName>
                </value>
                <value>
                    <fullName>Per Unit Pricing</fullName>
                </value>
                <value>
                    <fullName>Tiered Pricing</fullName>
                </value>
                <value>
                    <fullName>Volume Pricing</fullName>
                </value>
                <value>
                    <fullName>Percentage Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Name__c</fullName>
        <label>Product  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>invoiceit_s__Product__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>invoiceit_s__Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Sequence_No__c</fullName>
        <description>This holds the Sequence in which the charges are created and appears on the pdf files.</description>
        <inlineHelpText>This holds the Sequence in which the charges are created and appears on the pdf files.</inlineHelpText>
        <label>Sl No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Service_End_Date__c</fullName>
        <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Service_Start_Date__c</fullName>
        <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_City__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Country__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_State__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Street__c</fullName>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Zip_Code__c</fullName>
        <label>Tax Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Line_Amount__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <formula>invoiceit_s__Line_Amount__c  -  invoiceit_s__Discount_Value__c +  invoiceit_s__VAT__c +  invoiceit_s__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_of_Measurement__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__UsageFrequency__c</fullName>
        <label>Usage Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>invoiceit_s__Price_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__UsageMediation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Mediation</label>
        <referenceTo>invoiceit_s__Usage_Mediation__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>UsageMediation_InvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>LINE-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>